Fixing Library for Java 8